--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="mavenWebApp">
-   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Address Book</title>
-      <script src="lib/angular/angular.js"></script>
-      <script src="lib/angular/angular-resource.js"></script>
-	  <script src="js/app.js"></script>
-	  <script src="js/controllers.js"></script>
-	  <script src="js/services.js"></script>
-      
-   </head>
-   <body>
-   <div ng-controller="MyCtrl1">
-    <p>
-        Result from RESTful service is: {{ firstname }}
-    </p>
-</div>
-<!-- 
-      <div ng-include="'views/header.html'"></div>
-      <div ng-include="'views/content.html'"></div>
-      <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-      <link href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
-      <link href="css/app.css" rel="stylesheet">
-      <script type="text/javascript" src="bower_components/angular/angular.js"></script>
-      <script type="text/javascript" src="bower_components/ngStorage/ngStorage.min.js"></script>
-      <script type="text/javascript" src="js/app.js"></script>
-      <script type="text/javascript" src="js/controllers/contactListController.js"></script>
-      <script type="text/javascript" src="js/controllers/contactDetailsController.js"></script>
-      <script type="text/javascript" src="js/services/contacts.js"></script>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Angular Java RESTful Example</title>
 
- -->
-      
-   </body>
+</head>
+<body>
+	<div id="navbar" class="collapse navbar-collapse">
+		<ul class="nav navbar-nav">
+			<li><a href="#/dummy">dummy</a></li>
+			<!--  
+			<li><a href="#/user-list">user-list</a></li>
+			<li><a href="#/user-detail/1">user-detail/1</a></li>
+			<li><a href="#/user-creation">user-creation</a></li>
+			-->
+		</ul>
+	</div>
+
+	<div class="container" ng-view=""></div>
+	
+	<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+
+	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+	<script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
+	<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
+	
+	<script src="js/app.js"></script>
+	<script src="js/controllers.js"></script>
+	<script src="js/services.js"></script>
+
+</body>
 </html>
