add CRUD operations with RESTful API

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,14 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- For no cache -->
+<!-- 
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
+ -->
+
 <title>Angular Java RESTful Example</title>
 
 </head>
@@ -12,10 +20,8 @@
       <ul class="nav navbar-nav">
          <li><a href="#/dummy">dummy</a></li>
          <li><a href="#/user-list">user-list</a></li>
-         <!--
          <li><a href="#/user-detail/1">user-detail/1</a></li>
-         <li><a href="#/user-creation">user-creation</a></li>
-         -->
+         <li><a href="#/user/new">user-creation</a></li>
       </ul>
    </div>
 
